build_error.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
.\gradlew.bat : C:\Us
ers\Laptop\AndroidStu
dioProjects\MySoftPOS
\app\src\main\java\co
m\example\mysoftpos\t
estsuite\TestSuiteDet
ailActivity.java:57: 
error: incompatible 
types: 
List<TestCase> 
cannot be converted 
to List<TestScenario>
At line:1 char:1
+ .\gradlew.bat compi
leDebugJavaWithJavac 
2>&1 | Out-File 
-FilePath bui ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (C:\User   
 s\Laptop...t<Tes    
tScenario>:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
            
runOnUiThread(() -> a
dapter.setData(cases)
);
                     
                     
      ^
Note: C:\Users\Laptop
\AndroidStudioProject
s\MySoftPOS\app\src\m
ain\java\com\example\
mysoftpos\ui\txn\Tran
sactionResultActivity
.java uses or 
overrides a 
deprecated API.
Note: Recompile with 
-Xlint:deprecation 
for details.
Note: C:\Users\Laptop
\AndroidStudioProject
s\MySoftPOS\app\src\m
ain\java\com\example\
mysoftpos\iso8583\Sma
rtIsoBuilder.java 
uses unchecked or 
unsafe operations.
Note: Recompile with 
-Xlint:unchecked for 
details.
Note: Some messages 
have been 
simplified; 
recompile with 
-Xdiags:verbose to 
get full output
1 error

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build 
failed with an 
exception.

* What went wrong:
Execution failed for 
task ':app:compileDeb
ugJavaWithJavac'.
> Compilation 
failed; see the 
compiler output 
below.
  C:\Users\Laptop\And
roidStudioProjects\My
SoftPOS\app\src\main\
java\com\example\myso
ftpos\testsuite\TestS
uiteDetailActivity.ja
va:57: error: 
incompatible types: 
List<TestCase> 
cannot be converted 
to List<TestScenario>
              
runOnUiThread(() -> a
dapter.setData(cases)
);
                     
                     
        ^
  Note: C:\Users\Lapt
op\AndroidStudioProje
cts\MySoftPOS\app\src
\main\java\com\exampl
e\mysoftpos\ui\txn\Tr
ansactionResultActivi
ty.java uses or 
overrides a 
deprecated API.
  Note: Recompile 
with 
-Xlint:deprecation 
for details.
  Note: C:\Users\Lapt
op\AndroidStudioProje
cts\MySoftPOS\app\src
\main\java\com\exampl
e\mysoftpos\iso8583\S
martIsoBuilder.java 
uses unchecked or 
unsafe operations.
  Note: Recompile 
with 
-Xlint:unchecked for 
details.
  Note: Some 
messages have been 
simplified; 
recompile with 
-Xdiags:verbose to 
get full output
  1 error

* Try:
> Check your code 
and dependencies to 
fix the compilation 
error(s)
> Run with --scan to 
get full insights.

BUILD FAILED in 4s
19 actionable tasks: 1 executed, 18 up-to-date
